fix topbar menu being overflow in portrait mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -60,6 +60,10 @@ img {
 	&-action {
 		cursor: pointer;
 	}
+	&-menu {
+		max-height: 90vh;
+		overflow: auto;
+	}
 }
 
 .sticky-sidebar {
